@@ -5,7 +5,7 @@
  * 
  * (c) Copyright 2003, 2004, 2005 Hewlett-Packard Development Company, LP
  * [See end of file]
- * $Id: FBRuleInfGraph.java,v 1.58 2005-07-29 10:28:14 der Exp $
+ * $Id: FBRuleInfGraph.java,v 1.59 2005-10-06 22:02:07 der Exp $
  *****************************************************************/
 package com.hp.hpl.jena.reasoner.rulesys;
 
@@ -37,7 +37,7 @@ import org.apache.commons.logging.LogFactory;
  * for future reference).
  * 
  * @author <a href="mailto:der@hplb.hpl.hp.com">Dave Reynolds</a>
- * @version $Revision: 1.58 $ on $Date: 2005-07-29 10:28:14 $
+ * @version $Revision: 1.59 $ on $Date: 2005-10-06 22:02:07 $
  */
 public class FBRuleInfGraph  extends BasicForwardRuleInfGraph implements BackwardRuleInfGraphI {
     
@@ -594,7 +594,23 @@ public class FBRuleInfGraph  extends BasicForwardRuleInfGraph implements Backwar
             if (transitiveEngine.add(t)) isPrepared = false;
         }
         if (isPrepared) {
-            engine.add(t);
+            boolean needReset = false;
+            if (preprocessorHooks != null && preprocessorHooks.size() > 0) {
+                if (preprocessorHooks.size() > 1) {
+                    for (Iterator i = preprocessorHooks.iterator(); i.hasNext();) {
+                        if (((RulePreprocessHook)i.next()).needsRerun(this, t)) {
+                            needReset = true; break;
+                        }
+                    }
+                } else {
+                    needReset = ((RulePreprocessHook)preprocessorHooks.get(0)).needsRerun(this, t);
+                }
+            }
+            if (needReset) {
+                isPrepared = false;
+            } else {
+                engine.add(t);
+            }
         }
         bEngine.reset();
     }
